# Vumod

./: .gitignore  CMakeLists.txt  CppProperties.json  Makefile  README.md  build.bat  build_llvm.bat  build_mingw.bat  build_msvc.bat  imgui.ini  msvc_build.bat
data/: blender.mtl  double.blend  double.blend1  double.mtl  doubleg.mtl
data/models/: double.mtl  triple.mtl
data/shaders/: animated.glsl  animatedEntityFragment.glsl  animatedEntityVertex.glsl  contrast.glsl  fragmentShader.glsl  normal_mapped.glsl  particle.glsl  particleFShader.glsl  particleVShader.glsl  scene.glsl  skybox.glsl  skyboxFragment.glsl  skyboxFragmentShader.glsl  skyboxVertex.glsl  skyboxVertexShader.glsl  static.glsl  terrain.glsl  terrainFragmentShader.glsl  terrainVertexShader.glsl  texture_frag.glsl  texture_vert.glsl  unlit.glsl  unlit_frag.glsl  vertexShader.glsl  water.glsl  waterFragment.glsl  waterVertex.glsl  wire_frag.glsl  wire_vert.glsl  wireframe.glsl
example/: main.cpp
ext/: ext.cpp  ext.h  imgui.h  imgui_config.h
ext/glad/: glad.cpp  glad.h
ext/imgui/: .editorconfig  imgui.h  imgui_draw.cpp
ext/tinydir/: tinydir.h
ext/tinyobjloader/: tiny_obj_loader.h
ext/wren/: wren.h
glfw/docs/html/: menu.js
include/util/: util.h
src/: VuCamera.cpp  VuCamera.h  VuFS.cpp  VuFS.h  VuGui.cpp  VuGui.h  VuMaterial.cpp  VuMaterial.h  VuObject.cpp  VuObject.h  VuRenderer.cpp  VuRenderer.h  VuScene.cpp  VuScene.h  VuScript.cpp  VuScript.h  VuShader.cpp  VuShader.h  VuTexture.cpp  VuTexture.h  VuWindow.cpp  VuWindow.h  VuWireframe.cpp  VuWireframe.h  camera.cpp  common.h  graphics.cpp  gui.cpp  main.cpp  scene.cpp  script.cpp  shader.cpp  shaders.cpp  util.cpp  vfs.cpp  viewer.cpp  window.cpp
src/animation/: AnimatedModel.cpp  AnimatedModel.h  AnimatedModelRenderer.cpp  AnimatedModelRenderer.h  AnimatedModelShader.cpp  AnimatedModelShader.h  Animation.h  Animator.cpp  Animator.h
src/animation/loader/: AnimatedModeData.h  AnimatedModelLoader.h  AnimationData.h  AnimationLoader.h
src/api/: ICamera.h  IModel.h  IRenderer.h  IShader.h  ITexture.h  Renderer.h
src/default/: wire_frag.glsl  wire_vert.glsl
src/files/: FileUtils.cpp  FileUtils.h  VFS.cpp  VFS.h
src/fx/: ContrastShader.cpp  ContrastShader.h  ImageRenderer.cpp  ImageRenderer.h  PostProcessing.cpp  PostProcessing.h
src/graphics/: Buffer.cpp  Buffer.h  FloatBuffer.cpp  FloatBuffer.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Loader.cpp  Loader.h  TextureData.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/graphics/hazel/: OpenGLShader.cpp
src/gui/: Console.cpp  Console.h  Debug.h  FileBrowser.cpp  FileBrowser.h  VuGui.cpp  VuGui.h  console.cpp  file.cpp  gui.cpp  imfilebrowser.cpp  internal.cpp  ui.cpp
src/input/: InputManager.cpp  InputManager.h  MousePicker.cpp  MousePicker.h
src/light/: Colour.h  Light.h
src/loader/: ModelData.h  NormalMappingObjLoader.cpp  NormalMappingObjLoader.h  ObjLoader.cpp  ObjLoader.h  Vertex.cpp  Vertex.h
src/math/: Mat.h  Math.cpp  Math.h  MathUtils.h  Quat.h  Vec.h
src/models/: Model.h  ModelRenderer.cpp  ModelRenderer.h  NormalMappingRenderer.cpp  NormalMappingRenderer.h  NormalMappingShader.cpp  NormalMappingShader.h  RawModel.h  TexturedModel.h  Vertex.h  VuObject.cpp  VuObject.h
src/normal_mapping/: NormalMappingRenderer.cpp  NormalMappingRenderer.h  NormalMappingShader.cpp  NormalMappingShader.h
src/particles/: Particle.cpp  Particle.h  ParticleMaster.cpp  ParticleMaster.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleShader.cpp  ParticleShader.h  ParticleSystem.cpp  ParticleSystem.h  ParticleTexture.cpp  ParticleTexture.h
src/platform/: DisplayManager.h  VuWindow.cpp  VuWindow.h
src/scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  SceneShader.cpp  SceneShader.h
src/script/: VuScript.cpp  VuScript.h  lib.h  lib.wren
src/shader/: BufferLayout.cpp  BufferLayout.h  IndexBuffer.h  PostProcessing.h  VertexBuffer.h
src/shaders/: ShaderGL.cpp  ShaderGL.h  ShaderLibrary.cpp  ShaderLibrary.h  StaticShader.cpp  StaticShader.h
src/skybox/: SkyboxRenderer.cpp  SkyboxRenderer.h  SkyboxShader.cpp  SkyboxShader.h
src/sound/: Sound.cpp  Sound.h
src/terrain/: HeightsGenerator.cpp  HeightsGenerator.h  Terrain.cpp  Terrain.h  TerrainRenderer.cpp  TerrainRenderer.h  TerrainShader.cpp  TerrainShader.h  TerrainTexture.h
src/texture/: Material.cpp  Material.h  VuMaterial.cpp  VuMaterial.h  VuTexture.cpp  VuTexture.h
src/util/: StringUtils.cpp  StringUtils.h  Utils.cpp  Utils.h  util.cpp
src/water/: WaterFrameBuffers.cpp  WaterFrameBuffers.h  WaterRenderer.cpp  WaterRenderer.h  WaterShader.cpp  WaterShader.h  WaterTile.cpp  WaterTile.h
test/: test_math.cpp  test_shader.cpp
